--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -13,15 +13,10 @@ $font-main: 'Futura PT';
 $color-black: #000000;
 $color-white: #ffffff;
 
-$color-primary: $color-white;
-$color-action: #ad1e37;
-$color-action-sec: #ed8170;
-
-$color-bg-primary: #191919;
-$color-bg-secondary: #212121;
-$color-bg-lite: #f9f6ef;
-
-$color-text-gray: #aaaaaa;
+$bg-darkgrey: #292929;
+$bg-lightgrey: #f8f5f2;
+$tablet-width: 768px;
+$desktop-width: 1200px;
 
 /*
  * Animation Speed
