--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,3 +5,6 @@
 
 @import '../blocks/page-header/page-header';
 @import '../blocks/main-nav/main-nav';
+@import '../blocks/stats/stats';
+@import '../blocks/site-list/site-list';
+@import '../blocks/user-list/user-list';
