--- a/src/blocks/stats/stats.scss
+++ b/src/blocks/stats/stats.scss
@@ -7,6 +7,46 @@
 	padding-right: 40px;
 	padding-bottom: 25px;
 	padding-left: 40px;
+
+	color: #000000;
+
+	background-color: #ffffff;
+}
+.stats__slogan {
+	display: block;
+	margin-bottom: 15px;
+
+	font-size: 30px;
+	line-height: 30px;
+	font-weight: bold;
+	text-align: center;
+	text-transform: uppercase;
+}
+.stats__intro {
+	margin: 0;
+
+	font-size: 20px;
+	line-height: 27px;
+	text-align: center;
+}
+.stats__legend {
+	display: block;
+	font-size: 20px;
+	line-height: 20px;
+}
+.stats__legend--bottom {
+	padding-top: 20px;
+	padding-bottom: 14px;
+
+	text-align: center;
+	color: rgba(255, 255, 255, 0.3);
+
+	background-color: $bg-darkgrey;
+}
+.stats__legend sup {
+	top: -0.25em;
+
+	font-size: 90%;
 }
 .stats__list {
 	width: 100%;
