--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -17,6 +17,7 @@ $bg-darkgrey: #292929;
 $bg-lightgrey: #f8f5f2;
 $tablet-width: 768px;
 $desktop-width: 1200px;
+$mobile-width-only: 767px;
 
 /*
  * Animation Speed
