finish setka mobile

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -45,7 +45,9 @@ html(lang="ru")
 
 				header.stats__header
 					h2.visually-hidden Статистика Барбершопа
-					b.stats__slogan Стрижка у нас это выгодно!
+					b.stats__slogan Стрижка у нас
+						br
+						|  это выгодно!
 
 					p.stats__intro Мужская стрижка требует точного подхода. Обратимся к статистике:
 
