--- a/src/blocks/main-nav/main-nav.scss
+++ b/src/blocks/main-nav/main-nav.scss
@@ -1,9 +1,9 @@
 .main-nav {
   position: relative;
 
-	width: 320px;
+	width: auto;
   min-height: 51px;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 
   background-color: #826550;
 }
@@ -152,7 +152,9 @@
   .main-nav__wrapper {
   	display: flex;
   	justify-content: space-between;
-  	width: 640px;
+
+  	width: 84%;
+    max-width: 960px;
   	margin: 0 auto;
   }
   .main-nav__toggle {
@@ -160,7 +162,7 @@
   }
 }
 @media (min-width: $desktop-width) {
-	.main-nav__wrapper {
-  	width: 960px;
+  .main-nav__wrapper {
+    width: 960px;
   }
 }
