--- a/src/blocks/site-list/site-list.scss
+++ b/src/blocks/site-list/site-list.scss
@@ -33,6 +33,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    flex-grow: 1;
+
   	width: 570px;
   }
   .site-list__item {
