--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -25,6 +25,12 @@
 		background-image: url("../images/bg-header.jpg");
 		background-repeat: no-repeat;
 		background-position: center -9px;
+
+		@media(min-resolution: $retina-dpi),
+					(min-resolution: $retina-dppx) {
+						background-image: url("../images/bg-header@2x.jpg");
+						background-size: 1200px auto;
+					}
 	}
 	.page-header__logo img {
 		display: block;
